--- a/todo.html
+++ b/todo.html
@@ -4,13 +4,16 @@
     <link rel="stylesheet" href="todo.css">
 </head>
 <body>
-
-    <div class="greetings">Welcome!</div>
+     <nav class="position">
+    <h1 class="greetings">Welcome!</h1>
     <input placeholder="Enter todo here!" class="input-todo">
     <input type="date" class="input-date">
     <button class="btn" onclick="
     getData();
     ">Add</button>
+     </nav>
+    
+    <hr>
     <div class="js-display">
     </div>
     <script src="todo.js"></script>
